--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   <div class="w3-half w3-blue-grey w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
-      <img src="/w3images/avatar3.png" class="w3-margin w3-circle" alt="Person" style="width:50%">
+      <img src="MyPhoto.jpeg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p>Este sou eu</p>
+        <p>Aluno do MIT</p>
       </div>
     </div>
   </div>
@@ -40,27 +40,27 @@
     </div>
     <div class="w3-row">
       <div class="w3-half">
-        <img src="/w3images/coffee.jpg" style="width:100%">
+        <img src="https://www.w3schools.com/w3images/coffee.jpg" style="width:100%">
       </div>
       <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
+        <img src="https://www.w3schools.com/w3images/workbench.jpg" style="width:100%">
       </div>
     </div>
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
+        <img src="https://www.w3schools.com/w3images/workbench.jpg" style="width:100%">
       </div>
       <div class="w3-half">
-        <img src="/w3images/coffee.jpg" style="width:100%">
+        <img src="https://www.w3schools.com/w3images/coffee.jpg" style="width:100%">
       </div>
     </div>
 
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="/w3images/sound.jpg" style="width:100%">
+        <img src="https://www.w3schools.com/w3images/sound.jpg" style="width:100%">
       </div>
       <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
+        <img src="https://www.w3schools.com/w3images/workbench.jpg" style="width:100%">
       </div>
     </div><br>
     <p>Just call me awesome.</p>
@@ -77,34 +77,9 @@
             <th>Where</th>
           </tr>
           <tr class="w3-white">
-            <td>2012-2016</td>
-            <td>The rest is history..</td>
-            <td>Lorem ipsum</td>
-          </tr>
-          <tr>
-            <td>2009-2012</td>
-            <td>Started my own company</td>
-            <td>My Garage</td>
-          </tr>
-          <tr class="w3-white">
-            <td>2008-2009</td>
-            <td>Started working for Lorem</td>
-            <td>London, UK</td>
-          </tr>
-          <tr>
-            <td>2005-2008</td>
-            <td>Degree in Bachelor of Design</td>
-            <td>Harvard, USA</td>
-          </tr>
-          <tr class="w3-white">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australia</td>
-          </tr>
-          <tr class="w3-hide-medium">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australia</td>
+            <td>2020-2021</td>
+            <td>Estudando no MIT..</td>
+            <td>Professional Education</td>
           </tr>
         </table>
       </div>
@@ -116,13 +91,13 @@
 <div class="w3-row" id="contact">
   <div class="w3-half w3-dark-grey w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
-      <h1>Swing By</h1>
+      <h1>By</h1>
     </div>
     <div class="w3-padding-64">
       <p>..for a cup of coffee, or whatever.</p>
-      <p>Chicago, US</p>
-      <p>+00 1515151515</p>
-      <p>test@test.com</p>
+      <p>São Paulo, SP</p>
+      <p>+55 11 971526080</p>
+      <p>wilson.wistuba@gmail.com</p>
     </div>
   </div>
   <div class="w3-half w3-teal w3-container" style="height:700px">
